[tool.poetry]
name = "safe-ds-examples"
version = "0.11.0"
description = "Ready-to-use examples for the Safe-DS Python library."
license = "MIT"
authors = ["Lars Reimann <mail@larsreimann.com>"]
readme = "docs/README.md"
repository = "https://github.com/Safe-DS/Stdlib-Examples"
documentation = "https://stdlib-examples.safe-ds.com"
keywords = ["data science", "machine learning", "usability", "learnability"]
packages = [
    { include = "safeds_examples", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
safe-ds = ">=0.11,<0.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[tool.poetry.group.docs.dependencies]
jupyter = "^1.0.0"
mkdocs = "^1.4.2"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.8.3"
mkdocs-autorefs = "^0.4.1"
mkdocs-gen-files = "^0.4.0"
mkdocs-glightbox = "^0.3.1"
mkdocs-literate-nav = "^0.6.0"
mkdocs-material = "^9.1.2"
mkdocs-section-index = "^0.3.5"
mkdocs-jupyter = ">=0.23,<0.25"
mkdocs-exclude = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "smoke: quickly testing core functionality",
]

[tool.black]
line-length = 120
